<resources>
    <string name="app_name">WeatherApp2</string>
    <string name="City">CITY</string>
    <string name="Hour">Hour</string>
    <string name="Settings">Settings</string>
    <string name="Favourites">Favourites</string>
    <string name="Units">Use imperial units</string>
    <string name="Refresh">Automatic refresh time</string>
    <string name="Metric">Metric</string>
    <string name="Imperial">Imperial</string>
    <string name="LastUpdated">LastUpdated</string>
    <string name="Temperature">Temperature</string>
    <string name="Clouds">Clouds</string>
    <string name="Moist">Moist</string>
    <string name="Wind">Wind</string>
    <string name="Pressure">Pressure</string>
    <string name="Value">[Value]</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="City_here">City here</string>
    <string name="Min5">5 minutes</string>
    <string name="Min10">10 minutes</string>
    <string name="Min20">20 minutes</string>
    <string name="Min30">30 minutes</string>
    <string name="Tomorrow">Tomorrow</string>
    <string name="InTwoDays">In 2 days</string>
    <string name="InThreeDays">In 3 days</string>
    <string name="InFourDays">In 4 days</string>
    <string name="InFiveDays">In 5 days</string>
</resources>