<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FragmentSettings">


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="100dp" >


        <TextView
            android:id="@+id/textSettings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:text="@string/Settings" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="100dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/textUnits"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:text="@string/Units" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">


                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </LinearLayout>


        </LinearLayout>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <TextView
            android:id="@+id/textRefresh"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="@string/Refresh" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <Switch
            android:id="@+id/switchMinutes5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:text="@string/Min5"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <Switch
            android:id="@+id/switchMinutes10"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:text="@string/Min10"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <Switch
            android:id="@+id/switchMinutes20"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:text="@string/Min20"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <Switch
            android:id="@+id/switchMinutes30"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:text="@string/Min30"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </TableRow>
</LinearLayout>