<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/gradient_background">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="48dp"
                tools:ignore="UselessParent">

                <EditText
                    android:id="@+id/editTextTextPersonName"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:backgroundTint="@color/white"
                    android:inputType="textCapCharacters"
                    android:text="@string/City"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <ImageButton
                    android:id="@+id/imageButtonSearch"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    app:srcCompat="@drawable/outline_search_48"
                    android:layout_weight="1"
                    android:contentDescription="Search" />

                <ImageButton
                    android:id="@+id/imageButtonFav"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    app:srcCompat="@drawable/outline_favorite_border_48"
                    android:layout_weight="1"
                    android:contentDescription="Favourite" />

                <ImageButton
                    android:id="@+id/imageButtonMenu"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    app:srcCompat="@drawable/outline_menu_48"
                    android:layout_weight="1"
                    android:contentDescription="Menu" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="64dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <TextView
                        android:id="@+id/textCityName"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="2"
                        android:textColor="@color/white"
                        android:textSize="28sp"
                        android:gravity="center"
                        android:text="@string/City" />

                    <ImageButton
                        android:id="@+id/imageButtonAddToFav"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:background="@color/transparent"
                        app:srcCompat="@drawable/outline_favorite_border_48"
                        app:tint="@color/additional1"
                        android:layout_weight="1"
                        android:contentDescription="AddToFav" />

                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="128dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/texttile"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <TextView
                        android:id="@+id/textTemperature"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:textSize="28sp"
                        android:gravity="center"
                        android:text="@string/Temperature" />

                    <TextView
                        android:id="@+id/textTemperature2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:textColor="@color/additional1"
                        android:textSize="28sp"
                        android:gravity="center"
                        android:text="@string/Temperature" />
                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="128dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/texttile"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <TextView
                        android:id="@+id/textClouds"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:textSize="28sp"
                        android:gravity="center"
                        android:text="@string/Clouds" />

                    <TextView
                        android:id="@+id/textClouds2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:textColor="@color/additional1"
                        android:textSize="28sp"
                        android:gravity="center"
                        android:text="@string/Clouds" />
                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="128dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/texttile"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <TextView
                        android:id="@+id/textMoist"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:textSize="28sp"
                        android:gravity="center"
                        android:text="@string/Moist" />

                    <TextView
                        android:id="@+id/textMoist2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:textColor="@color/additional1"
                        android:textSize="28sp"
                        android:gravity="center"
                        android:text="@string/Moist" />
                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="128dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/texttile"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <TextView
                        android:id="@+id/textWind"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:textSize="28sp"
                        android:gravity="center"
                        android:text="@string/Wind" />

                    <TextView
                        android:id="@+id/textWind2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:textColor="@color/additional1"
                        android:textSize="28sp"
                        android:gravity="center"
                        android:text="@string/Wind" />
                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="128dp"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/texttile"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <TextView
                        android:id="@+id/textPressure"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:textSize="28sp"
                        android:gravity="center"
                        android:text="@string/Pressure" />

                    <TextView
                        android:id="@+id/textPressure2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:textColor="@color/additional1"
                        android:textSize="28sp"
                        android:gravity="center"
                        android:text="@string/Pressure" />
                </LinearLayout>

            </TableRow>

        </TableLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>